# intro-to-genai-in-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
src/: config.yaml
src/chatbot/: chat_context.py  chat_history.py  chatbot_base.py  config.py  start_chat.py
src/chatbot/lessons/exercises/e00_intro/: README.md  __main__.py
src/chatbot/lessons/exercises/e01_prompting/: README.md
src/chatbot/lessons/exercises/e02_system_prompt/: README.md
src/chatbot/lessons/exercises/e03_conversation_history/: README.md
src/chatbot/lessons/exercises/e03_memory/: README.md  chatbot.py
src/chatbot/lessons/exercises/e04_rag/: README.md  tests.py
src/chatbot/lessons/exercises/e04_structured_outputs/: README.md  __main__.py
src/chatbot/lessons/exercises/e05_structured_outputs/: README.md  chatbot.py  tests.py
src/chatbot/lessons/exercises/e05_tool_calling/: README.md  tests.py
src/chatbot/lessons/exercises/e06_mcp/: README.md  tests.py
src/chatbot/lessons/exercises/e06_tool_calling/: README.md  chatbot.py
src/chatbot/lessons/exercises/e07_mcp/: README.md  chatbot.py  mcp_server.py
src/chatbot/lessons/exercises/e07_rag/: README.md  chatbot.py  tests.py
src/chatbot/lessons/exercises/e08_custom_agent/: README.md  author.py  chatbot.py
src/chatbot/lessons/exercises/e09_deep_agent/: README.md  chatbot.py  tests.py
src/chatbot/lessons/exercises/e09_deep_agent/skills/emoji-decorator/: SKILL.md
src/chatbot/lessons/exercises/e09_observability/: README.md
src/chatbot/lessons/exercises/e10_a2a/: README.md  __init__.py  agents.yaml  chatbot.py  tests.py
src/chatbot/lessons/exercises/e10_a2a/agents/: __init__.py
src/chatbot/lessons/exercises/e10_a2a/agents/budget_expert/: __init__.py  __main__.py  agent.py  agent_card.yaml
src/chatbot/lessons/exercises/e10_a2a/agents/destination_expert/: __init__.py  __main__.py  agent.py  agent_card.yaml
src/chatbot/lessons/exercises/e10_observability/: README.md
src/chatbot/lessons/exercises/e11_observability/: README.md
src/chatbot/lessons/solutions/s01_prompting/: README.md  tests.py
src/chatbot/lessons/solutions/s02_system_prompt/: README.md  tests.py
src/chatbot/lessons/solutions/s03_conversation_history/: README.md  tests.py
src/chatbot/lessons/solutions/s03_memory/: README.md  chatbot.py
src/chatbot/lessons/solutions/s04_rag/: README.md  chatbot.py
src/chatbot/lessons/solutions/s04_structured_outputs/: README.md
src/chatbot/lessons/solutions/s05_structured_outputs/: README.md  chatbot.py
src/chatbot/lessons/solutions/s05_tool_calling/: README.md  chatbot.py  tests.py
src/chatbot/lessons/solutions/s06_mcp/: README.md  chatbot.py  mcp_server.py  tests.py
src/chatbot/lessons/solutions/s06_tool_calling/: README.md  chatbot.py
src/chatbot/lessons/solutions/s07_mcp/: README.md
src/chatbot/lessons/solutions/s07_rag/: README.md  chatbot.py
src/chatbot/lessons/solutions/s08_custom_agent/: README.md  author.py  chatbot.py  tests.py
src/chatbot/lessons/solutions/s09_deep_agent/: README.md  __main__.py  chatbot.py  tests.py
src/chatbot/lessons/solutions/s09_deep_agent/skills/create-quiz-questions/: SKILL.md
src/chatbot/lessons/solutions/s09_deep_agent/skills/generate-flashcards/: SKILL.md
src/chatbot/lessons/solutions/s10_a2a/: README.md  __init__.py  __main__.py  agents.yaml  chatbot.py  tests.py
src/chatbot/lessons/solutions/s10_a2a/agents/budget_expert/: __main__.py  agent.py  agent_card.yaml
src/chatbot/lessons/solutions/s10_a2a/agents/destination_expert/: __main__.py  agent.py  agent_card.yaml
src/chatbot/lessons/step0_intro/: README.md
src/chatbot/services/: agent.py  authenticator.py  local_embeddings.py  local_vectordb.py  mcp_client.py  remote_embeddings.py  remote_llm.py
src/chatbot/testing/: README.md  evaluator.py  test_suite.py
src/chatbot/utils/: a2a.py  console.py  logging.py  processes.py  skill_loader.py  telemetry.py
src/user_interface/: app.py  select_chatbot.py
