[project]
name = "python-genai-intro"
version = "0.1.0"
description = "Introduction to programming Gen-AI applications in Python"
authors = [{ name = "Matei Tene", email = "matei.tene@gmail.com" }]
requires-python = ">=3.10,<4.0.0"
readme = "README.md"
dependencies = [
    "streamlit~=1.50.0",
    "streamlit-chat~=0.1.0",
    "langchain~=1.1.0",
    "langchain-core~=1.1.0",
    "langchain-community~=0.4.0",
    "langchain-text-splitters~=1.0.0",
    "langchain-mcp-adapters~=0.1.0",
    "langchain-openai~=1.1.0",
    "langgraph~=1.0.5",
    "fastmcp~=2.13.0",
    "faiss-cpu~=1.13.1",
    "pydantic~=2.12.0",
    "pyyaml~=6.0.0",
    "rich~=14.1.0",
    "tzdata~=2025.0",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.14.0",
    "pyright~=1.1.0",
]

[project.scripts]
genai-chat = "user_interface.__main__:main"
exercise-0 = "chatbot.lessons.exercises.e00_intro.__main__:main"
exercise-1 = "chatbot.lessons.exercises.e01_prompting.__main__:main"
solution-1 = "chatbot.lessons.solutions.s01_prompting.__main__:main"
exercise-2 = "chatbot.lessons.exercises.e02_system_prompt.__main__:main"
solution-2 = "chatbot.lessons.solutions.s02_system_prompt.__main__:main"
exercise-3 = "chatbot.lessons.exercises.e03_conversation_history.__main__:main"
solution-3 = "chatbot.lessons.solutions.s03_conversation_history.__main__:main"
exercise-4 = "chatbot.lessons.exercises.e04_structured_outputs.__main__:main"
solution-4 = "chatbot.lessons.solutions.s04_structured_outputs.__main__:main"
exercise-5 = "chatbot.lessons.exercises.e05_tool_calling.__main__:main"
solution-5 = "chatbot.lessons.solutions.s05_tool_calling.__main__:main"
exercise-6 = "chatbot.lessons.exercises.e06_mcp.__main__:main"
solution-6 = "chatbot.lessons.solutions.s06_mcp.__main__:main"
exercise-7 = "chatbot.lessons.exercises.e07_rag.__main__:main"
solution-7 = "chatbot.lessons.solutions.s07_rag.__main__:main"
exercise-8 = "chatbot.lessons.exercises.e08_custom_agent.__main__:main"
solution-8 = "chatbot.lessons.solutions.s08_custom_agent.__main__:main"

[tool.hatch.build.targets.sdist]
include = [
    "src/user_interface",
    "src/chatbot",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/user_interface",
    "src/chatbot",
]

[tool.hatch.build.targets.wheel.sources]
"src/user_interface" = "user_interface"
"src/chatbot" = "chatbot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
